--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -1,6 +1,6 @@
 [[language]]
 name = "python"
-language-server = { command = "ruff-lsp" }
+language-server = { command = "pylsp" }
 
 # In case you'd like to use ruff alongside black for code formatting:
 formatter = { command = "black", args = ["--quiet", "-"] }
