--- a/.config/helix/themes/everforest.toml
+++ b/.config/helix/themes/everforest.toml
@@ -56,7 +56,7 @@
 "diff.delta" = "orange"
 "diff.minus" = "red"
 
-"ui.background" = { bg = "bg0" }
+"ui.background" = {}
 "ui.background.separator" = "grey0"
 "ui.cursor" = { fg = "bg0", bg = "fg" }
 "ui.cursor.match" = { fg = "orange", bg = "bg_yellow" }
