--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -24,3 +24,7 @@ auto-format = true
 name = "typescript"
 formatter = { command = 'prettier', args = ["--parser", "typescript"] }
 auto-format = true
+
+[[language]]
+name = "go"
+auto-format = true
