--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -6,14 +6,17 @@ auto-format = true
 [[language]]
 name = "html"
 formatter = { command = 'prettier', args = ["--parser", "html"] }
+auto-format = true
 
 [[language]]
 name = "json"
 formatter = { command = 'prettier', args = ["--parser", "json"] }
+auto-format = true
 
 [[language]]
 name = "css"
 formatter = { command = 'prettier', args = ["--parser", "css"] }
+auto-format = true
 
 [[language]]
 name = "javascript"
