add indent lines

--- a/.config/helix/config.toml
+++ b/.config/helix/config.toml
@@ -9,3 +9,7 @@ select = "block"
 true-color = true
 line-number = "relative"
 
+[editor.indent-guides]
+render = true
+character = "╎" # Some characters that work well: "▏", "┆", "┊", "⸽"
+skip-levels = 1
