--- a/.config/helix/languages.toml
+++ b/.config/helix/languages.toml
@@ -31,3 +31,8 @@ auto-format = true
 [[language]]
 name = "go"
 auto-format = true
+
+[[language]]
+name = "rust"
+auto-format = true
+formatter = { command = 'rustfmt', args = [] }
